# ai-plugins

./: .coderabbit.yaml  .gitignore  .mergify.yml  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile  lefthook.yml  order.md  package-lock.json  package.json  release-plz.toml  rust-toolchain.toml
.cargo/: mutants.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.codex/: config.toml
.development-discipline/: final-review.toml
abandoned/: 20260707-sf8b-allow-drag-and-drop-reprioritization-in-the-tiber-dashboard-backlog.md  20260708-7zs6-strengthen-cross-project-tiber-task-workflow-guidance.md  20260709-77j3-route-advisor-skill-to-the-appropriate-gpt-5-6-model.md  20260710-rhk3-mechanically-enforce-three-clean-final-review-runs-before-pr-or-main-merge.md  20260711-42si-block-pushes-until-final-review-completes-three-clean-passes.md  20260711-jymz-distinguish-lefthook-installer-lock-errors-from-active-contention.md  20260711-qhgu-mechanically-enforce-linked-worktree-only-feature-changes.md  20260711-w7zi-clarify-lefthook-crash-recovery-when-descendants-retain-the-installer-lock.md  20260712-m7xk-eliminate-tiber-cli-pre-parser-grammar-duplication.md  20260712-r298-expand-focused-tiber-cli-invalid-invocation-coverage.md  20260713-2rd3-preserve-dangling-workspace-symlinks-during-gpt-5-6-benchmark-preparation.md  20260713-ffpt-avoid-initializing-the-gpt-5-6-trace-provider-during-unused-cleanup.md  20260713-hkrf-cover-gpt-5-6-benchmark-sample-overrides-and-exact-provider-label-contracts.md  20260713-j3x4-render-effective-codex-eval-model-overrides-in-dashboard-labels.md  20260713-jtq4-reject-empty-skills-only-codex-eval-plugin-selections.md  20260713-xg6h-prove-exact-gpt-5-6-benchmark-workspace-ownership-marker-contents.md  20260714-8n76-reject-extra-arguments-in-generic-eval-threshold-checker.md  20260714-e3sx-synchronize-tiber-plugin-and-mcp-server-versions.md  20260714-hmwe-make-final-review-release-fixture-ignore-ambient-git-signing-and-hooks.md  20260714-iv3g-retire-content-addressed-final-review-delta-artifacts.md  20260714-ucd7-clean-up-auto-created-gpt-5-6-benchmark-workspaces.md  20260716-2iud-build-credential-isolated-full-plugin-writable-eval-runtime.md  20260716-irxa-create-or-update-the-writing-style-plugin-from-writing-style-zip.md  20260716-v2ji-make-provider-eval-timeouts-safely-resumable-without-matrix-expansion.md  20260716-ya64-make-eval-hard-guards-distinguish-refusals-from-forbidden-intent.md  20260718-n8xa-audit-and-update-hindsight-integration-for-current-coding-harnesses.md  20260718-zcsh-review-benchmark-contract-and-scorer-slice.md  20260719-62jw-isolated-workspace-matrix-preparation.md  20260719-m65h-runtime-provenance-and-regular-tree-hashing.md  20260719-pe3u-locked-expense-report-benchmark-fixture.md  20260719-pvk7-store-real-line-breaks-in-tiber-ticket-text.md  20260719-zcj7-benchmark-contract-and-provider-input-surface.md  20260720-88n3-refuse-task-boards-that-tiber-does-not-own.md  20260721-7xvd-verify-benchmark-cancellation-through-its-public-interface.md  20260721-mriy-publish-a-github-release-for-each-marketplace-version.md  20260721-n2hq-prevent-work-from-being-marked-complete-before-formal-review-finishes.md  20260721-phfz-use-trusted-security-standards-in-every-security-review.md  20260721-qtpp-stop-measuring-plugin-lift-when-an-eval-prompt-gives-away-the-answer.md  20260722-7hf5-make-final-review-behavior-checks-measure-the-intended-protocol-reliably.md  20260722-k9c6-keep-final-review-risk-assessments-linked-to-the-correct-review.md  (+1 more)
backlog/: 20260706-8gxy-dashboard-shows-lock-busy-error-during-tiber-operations.md  20260707-29i8-show-pr-mr-status-badges-on-in-progress-tiber-cards.md  20260707-4rbv-make-tiber-opaque-to-host-repositories-and-agents.md  (+162 more)
crates/sidequest/: CHANGELOG.md  Cargo.toml
crates/sidequest-core/: CHANGELOG.md  Cargo.toml
crates/sidequest-core/src/: config.rs  harness.rs  launch.rs  lib.rs  side_quest.rs
crates/sidequest/src/: config.rs  deliver.rs  lib.rs  logs.rs  quest.rs  registry.rs  server.rs  session.rs  steer.rs  worktree.rs
crates/sidequest/tests/: cucumber.rs
crates/sidequest/tests/features/: connect.feature  deliver.feature  harness.feature  harness_command.feature  launch.feature  list.feature  logs.feature  robustness.feature  steer.feature
plugins/taskbranch/rust/crates/taskbranch-cli/: Cargo.toml
plugins/taskbranch/rust/crates/taskbranch-cli/src/: main.rs
plugins/taskbranch/rust/crates/taskbranch-cli/tests/: close_from_trailers.rs  create_list.rs  init.rs  links.rs  locking.rs  mcp_stdio.rs  metadata.rs  order_transition.rs  scaffold.rs  subtasks.rs  sync.rs  validate.rs
plugins/taskbranch/rust/crates/taskbranch-cli/tests/support/: mod.rs
plugins/taskbranch/rust/crates/taskbranch-server/: Cargo.toml
plugins/taskbranch/rust/crates/taskbranch-server/src/: lib.rs
plugins/taskbranch/rust/crates/taskbranch-server/tests/: dashboard.rs
plugins/tiber/rust/crates/tiber-cli/: Cargo.toml
plugins/tiber/rust/crates/tiber-cli/src/: main.rs
plugins/tiber/rust/crates/tiber-cli/tests/: cli_compatibility.rs  cli_errors.rs  cli_help.rs  close_from_trailers.rs  create_list.rs  dashboard_serve.rs  init.rs  install_bin.rs  links.rs  locking.rs  mcp_stdio.rs  metadata.rs  order_transition.rs  scaffold.rs  structured_edits.rs  subtasks.rs  sync.rs  validate.rs
plugins/tiber/rust/crates/tiber-cli/tests/support/: mod.rs
plugins/tiber/rust/crates/tiber-server/: Cargo.toml
plugins/tiber/rust/crates/tiber-server/src/: lib.rs
plugins/tiber/rust/crates/tiber-server/tests/: dashboard.rs
(+518 files in other folders)
