[package]
name = "sidequest-core"
description = "Pure functional core for the sidequest control plane: semantic types, effects, and state machines. Has no I/O dependencies by construction."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nutype = { version = "0.7", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
