[package]
name = "sidequest"
description = "The sidequest control plane: the imperative shell (trampoline interpreter, process supervision, git/worktree, registry, forge port, notifications) with an MCP stdio server and a CLI."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
