[package]
name = "sidequest"
description = "The sidequest control plane: the imperative shell (trampoline interpreter, process supervision, git/worktree, registry, forge port, notifications) with an MCP stdio server and a CLI."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
rmcp = { version = "1.7", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
