[package]
name = "taskbranch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
taskbranch-git = { path = "../taskbranch-git" }
taskbranch-mcp = { path = "../taskbranch-mcp" }
taskbranch-server = { path = "../taskbranch-server" }
tokio = { version = "1", features = ["net", "rt-multi-thread"] }

[[bin]]
name = "taskbranch"
path = "src/main.rs"
