[package]
name = "tiber-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1"
tiber-git = { path = "../tiber-git" }
tiber-mcp = { path = "../tiber-mcp" }
tiber-server = { path = "../tiber-server" }
tokio = { version = "1", features = ["net", "rt-multi-thread"] }

[[bin]]
name = "tiber"
path = "src/main.rs"
