[package]
name = "tiber-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
tiber-git = { path = "../tiber-git" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[lib]
path = "src/lib.rs"
